--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap');
 *{
-    font-family: 'Fredoka', sans-serif;
+    font-family: 'Fredoka', cursive;
 }
 
 body{
@@ -14,10 +14,9 @@ body{
 }
 
 .main-container h1{
-    font-size: 100px;
+    font-size: 6.5vw;
     color: #FAB201;
-    -webkit-text-stroke: 5px white;
-    font-weight: bolder;
+    -webkit-text-stroke: 7px white;
 }
 
 .game-grid{
@@ -32,11 +31,15 @@ body{
     width: 100px;
     height: 100px;
     background-color: white;
-    border-radius: 10px;
-    box-shadow: inset -2px -2px 0 0 gray;
+    border-radius: 14px;
+    box-shadow: inset -2px -2px 0 0 rgb(192, 192, 192);
     
 }
 .footer{
     color: white;
     margin-top: 10%;
+    font-size: 2.1vw;
+}
+.main-container h2{
+    font-weight: bold;
 }
